# studyTools

gccCompiler/: build_run_test.sh  demo  readme.md  test.cpp
gccCompiler/GCC-11.2.0/: readme.txt
pythonUI/: test.py
shell交互界面/: shell.sh
studyAsan/: detected-memory-leaks.cpp  global-buffer-overflow.cpp  heap-buffer-overflow.cpp  heap-use-after-free.cpp  stack-buffer-overflow.cpp  stack-use-after-return.cpp  stack-use-after-scope.cpp
studyAsan/initialization-order-fiasco/: a.cpp  b.cpp
studyBackwardCpp/: CMakeLists.txt
studyBackwardCpp/src/: main.cpp
studyConan/simple_lib/: CMakeLists.txt  build.sh  conanfile.py
studyConan/simple_lib/src/: simple_lib.cpp
studyConan/test_project/: CMakeLists.txt  build.sh  conanfile.txt
studyConan/test_project2/: CMakeLists.txt  CMakePresets.json  build.sh  conan_toolchain.cmake  conanbuild.sh  conanbuildenv-release-armv8.sh  conandeps_legacy.cmake  conanrun.sh  conanrunenv-release-armv8.sh  deactivate_conanbuild.sh  deactivate_conanrun.sh  main.cpp  simple_lib-Target-release.cmake  simple_lib-config.cmake  simple_lib-release-armv8-data.cmake  simple_libTargets.cmake
studyCppJson/demo/: nested_json.json  read  read.cpp  release.sh  write  write.cpp
studyDocker/: readme.md
studyDrawio/: demo.drawio  readme.md
studyEncryption/: encryption_and_decryption.cpp
studyFlameGraph/: CMakeLists.txt  README.md  main.cpp  release.sh
studyFlatbuffers/01-demo/: 01-schema.fbs  01-test.py
studyGcov/integratedTestDemo/: gen.sh  readme.md  run.sh
studyGcov/integratedTestDemo/rawdata/: demo.gcno
studyGcov/integratedTestDemo/run/: demo.gcda
studyGcov/integratedTestDemo/src/: demo.cpp
studyGcov/multiInfoFile/: gen.sh
studyGcov/multiInfoFile/rawdata/demo/: demo.gcda  demo.gcno
studyGcov/multiInfoFile/rawdata/funcA/: funcA.gcda  funcA.gcno
studyGcov/multiInfoFile/rawdata/funcB/: funcB.gcda  funcB.gcno
studyGcov/multiInfoFile/rawdata/funcC/: funcC.gcda  funcC.gcno
studyGcov/multiInfoFile/src/: demo.cpp  funcA.cpp  funcB.cpp  funcB.h  funcC.cpp  funcC.h
studyGcov/oneInfoFile/: gen.sh  readme.md
studyGcov/oneInfoFile/rawdata/: demo.gcda  demo.gcno
studyGcov/oneInfoFile/src/: demo.cpp
studyGraphviz/: digraph.dot  graph.dot  readme.md
studyGtest/: CMakeLists.txt
studyGtest/src/: test_01.cpp
studyHTML/: 00-HTML基本骨架.html  09-视频标签.html  11-表格.html  12-合并单元格.html  13-表单.html  14-下拉菜单.html  16-label标签.html  readme.md
studyMLTools/00-模型转换/: 00-pytorch转onnx.py  simple_model.onnx
studyNinja/01-demo/: CMakeLists.txt  readme.md  release.sh
studyNinja/01-demo/src/: main.cpp
studyOpenMP/for/: CMakeLists.txt  main.cpp
studyPlantuml/: 01声明参者.pu  01箭头.pu
studyPlantuml/时序图/: 02声明参与者_01.pu  02声明参与者_02.pu  03文本对齐.pu  04对消息序列编号.pu  06分割示意图.pu  07组合消息与次级分组标签.pu  08注释与标签_02.pu  10分隔符.pu  14空间.pu  15生命线的激活与撤销_01.pu  16创建参与者.pu  18进入和发出消息_01.pu  20锚点和持续时间.pu  22更多标题信息.pu  26特定外观参数.pu  27隐藏孤立参与者.pu  28给群发信息着色.pu
studyPlantuml/类图/: 01元素声明.pu
studyPlantuml/类图/类之间的关系/: 类之间的关系.md
studyPlantuml/顺序图/: 05页面标题_页眉和页脚.pu  08注释与标签_01.pu  08注释与标签_03.pu  11引用.pu  12延时.pu  13文本换行.pu  15生命线的激活与撤销_02.pu  17激活_撤销和创建的创建的快捷语法.pu  18进入和发出消息_02.pu  19缩短的进入信息与发出信息箭头.pu  21构造类型和圈点.pu  23包裹参与者.pu  25外观参数skinparam_01.pu
studyProtobuf/: .gitignore  CMakeLists.txt  readme.md  release.sh  test.cpp
studyProtobuf/protoCfg/: family.proto  game.proto
studyProtobuf/protobuf-21.5/src/google/protobuf/: unittest.pb.h
studyProtobuf/protobuf-21.5/src/google/protobuf/util/internal/testdata/: books.pb.h
studyProtobuf/protobufGenFiles/: family.pb.cc  family.pb.h  game.pb.cc  game.pb.h
studyProtobuf/prototxt/: test.prototxt
studyTinyXML/: CMakeLists.txt  model.xml  release.sh  test.cpp
studyTinyXML/tinyxml/: CMakeLists.txt
studyWeb/studyCSS/: 00-CSS初体验.html  01-CSS引入方式.html  01-my.css  02-选择器.html  03-通配符选择器.html  04-画盒子.html  05-文字控制属性.html  06-调试工具.html
studyWeb/studyHTML/: 01-标签之间的关系.html  02-标题与段落标签.html  03-换行与水平标签.html  04-文本格式化标签.html  05-图像标签.html  06-路径.html  07-超链接标签.html  08-音频标签.html  10-列表.html  15-文本域.html  17-按钮.html  18-无语义的布局标签.html  19-字符实体.html
trace/: test.json  test2.json
